# libpam-superuserauth

./: .gitignore  README.md  configure.ac
man/: Makefile.am  pam_superuserauth.8
src/: Makefile.am  pam_superuserauth.c
